# mega-ai-coder

./: .coderignore  .env.example  Dockerfile  docker-compose.yml  pyproject.toml
.github/workflows/: ai-reviewer.yml
src/: logger.py  main.py  reviewer_entry.py  runner.py
src/agents/: coder.py  prompts.py  reviewer.py
src/core/: config.py  context.py  github_client.py  local_git.py  syntax_analyzer.py
src/server/: app.py
src/tools/: __init__.py  analysis_tool.py  docker_tool.py  edit_tool.py  end_tool.py  filesystem_tool.py  test_tool.py
test_agent/: test_base.py
